--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@ For more details:
 This is a placeholder for base href that will be replaced by the value of
 the `--base-href` argument provided to `flutter build`.
 -->
-  <base href="/anime_recipes_web/" />
+  <base href="/anime_recipes_web/"/>
 
-  <meta charset="UTF-8" />
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
-  <meta name="description" content="A new Flutter project." />
+  <meta charset="UTF-8"/>
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible"/>
+  <meta content="A new Flutter project." name="description"/>
 
   <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <meta name="apple-mobile-web-app-title" content="anime_recipes" />
-  <link rel="apple-touch-icon" href="icons/Icon-192.png" />
+  <meta content="yes" name="apple-mobile-web-app-capable"/>
+  <meta content="black" name="apple-mobile-web-app-status-bar-style"/>
+  <meta content="anime_recipes" name="apple-mobile-web-app-title"/>
+  <link href="icons/Icon-192.png" rel="apple-touch-icon"/>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link href="favicon.png" rel="icon" type="image/png"/>
 
   <title>anime_recipes</title>
-  <link rel="manifest" href="manifest.json" />
+  <link href="manifest.json" rel="manifest"/>
 
   <style id="splash-screen-style">
     html {
@@ -104,57 +104,57 @@ the `--base-href` argument provided to `flutter build`.
 <body>
 <picture id="splash-branding">
   <source
+          media="(prefers-color-scheme: light)"
           srcset="
           splash/img/branding-1x.png 1x,
           splash/img/branding-2x.png 2x,
           splash/img/branding-3x.png 3x,
           splash/img/branding-4x.png 4x
         "
-          media="(prefers-color-scheme: light)"
   />
   <source
+          media="(prefers-color-scheme: dark)"
           srcset="
           splash/img/branding-dark-1x.png 1x,
           splash/img/branding-dark-2x.png 2x,
           splash/img/branding-dark-3x.png 3x,
           splash/img/branding-dark-4x.png 4x
         "
-          media="(prefers-color-scheme: dark)"
   />
   <img
-          class="bottom"
-          aria-hidden="true"
-          src="splash/img/branding-1x.png"
           alt=""
+          aria-hidden="true"
+          class="bottom"
+          src="splash/img/branding-1x.png"
   />
 </picture>
 <picture id="splash">
   <source
+          media="(prefers-color-scheme: light)"
           srcset="
           splash/img/light-1x.png 1x,
           splash/img/light-2x.png 2x,
           splash/img/light-3x.png 3x,
           splash/img/light-4x.png 4x
         "
-          media="(prefers-color-scheme: light)"
   />
   <source
+          media="(prefers-color-scheme: dark)"
           srcset="
           splash/img/dark-1x.png 1x,
           splash/img/dark-2x.png 2x,
           splash/img/dark-3x.png 3x,
           splash/img/dark-4x.png 4x
         "
-          media="(prefers-color-scheme: dark)"
   />
   <img
-          class="center"
-          aria-hidden="true"
-          src="splash/img/light-1x.png"
           alt=""
+          aria-hidden="true"
+          class="center"
+          src="splash/img/light-1x.png"
   />
 </picture>
 
-<script src="flutter_bootstrap.js" async=""></script>
+<script async="" src="flutter_bootstrap.js"></script>
 </body>
 </html>
